<resources>
    <string name="app_name">PersonalDiary</string>
    <string name="register_title">Register</string>
    <string name="register_title_underlined"><u>Register</u></string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="doesn_t_have_an_account_yet">Doesn\'t have an account yet?</string>
    <string name="archive_title">Archive</string>
    <string name="diary_title">Lorem Ipsum</string>
    <string name="diary_created_at">2022-09-21</string>
    <string name="hello">Hello,</string>
    <string name="button_to_archive_page">Button to archive page</string>
    <string name="diary_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu mattis lectus. Aliquam erat volutpat. Fusce justo ligula, dignissim sed iaculis et, congue id urna. Nunc feugiat egestas risus, in interdum magna blandit vel. Pellentesque aliquet, mi quis vestibulum feugiat, odio urna maximus tortor, porttitor bibendum quam nisl a nisl. Aliquam lobortis mi at ante ultrices, nec sodales mi fermentum. Sed eu nisi lobortis tellus maximus volutpat facilisis pharetra elit. Nunc imperdiet at nulla nam.</string>
    <string name="create">Create</string>
    <string name="personaldiary_title">PersonalDiary</string>
    <string name="created_by_owner">Created by Devwanto Dariel Nugroho</string>
    <string name="powered_by_api">Powered by halfwineaid Apiary API</string>
    <string name="hi">Hi,</string>
    <string name="what_s_on_your_mind_right_now">What\'s on your mind right now?</string>
    <string name="save">Save</string>
    <string name="what_s_up">What\'s up?</string>
    <string name="add_new_diary">Add New Diary</string>
    <string name="hey_there">Hey there!</string>
    <string name="search_title">Search</string>
    <string name="title">Title</string>
    <string name="edit_title">Edit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_diary">Update Diary</string>
    <string name="create_diary">Create Diary</string>
    <string name="alphanumeric">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="hello_there">Hello there!</string>

</resources>