<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:padding="16dp"
    tools:context=".ui.diary.update.UpdateDiaryActivity">

    <TextView
        android:id="@+id/tv_header_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_s_on_your_mind_right_now"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="diaryContent"
        android:background="@drawable/custom_input"
        android:digits="@string/alphanumeric"
        android:gravity="top|start"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_header_ask" />

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:autofillHints="diaryContent"
        android:background="@drawable/custom_input"
        android:digits="@string/alphanumeric"
        android:gravity="top|start"
        android:hint="@string/what_s_up"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLength="500"
        android:maxLines="5"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_save_diary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/diary_custom_view"
            android:text="@string/save" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>